Moves all test from the storyboard to repective view models

--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
             </objects>
             <point key="canvasLocation" x="-921" y="-71"/>
         </scene>
-        <!--Photos For Days-->
+        <!--<Photos For Days>-->
         <scene sceneID="DGv-Dn-KfA">
             <objects>
                 <viewController storyboardIdentifier="SelectDateViewController" id="IpJ-h8-xkM" customClass="SelectDateViewController" customModule="PhotosForDays" customModuleProvider="target" sceneMemberID="viewController">
@@ -67,7 +67,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-fh-STk">
-                                <rect key="frame" x="0.0" y="245.99999999999997" width="414" height="404.33333333333326"/>
+                                <rect key="frame" x="0.0" y="258" width="414" height="380"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="2oL-Dp-qhh">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="280.66666666666669"/>
@@ -75,14 +75,14 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qRX-Xm-XiU">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="33.666666666666664"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a date to get started:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
-                                                        <rect key="frame" x="20" y="0.0" width="374" height="33.666666666666664"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started:&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
+                                                        <rect key="frame" x="24" y="0.0" width="366" height="33.666666666666664"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="20" bottom="0.0" trailing="20"/>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="24" bottom="0.0" trailing="24"/>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-eZ-eeT">
                                                 <rect key="frame" x="0.0" y="64.666666666666686" width="414" height="216"/>
@@ -93,29 +93,21 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XqP-sG-Tp8">
-                                        <rect key="frame" x="0.0" y="312.66666666666663" width="414" height="91.666666666666686"/>
+                                        <rect key="frame" x="0.0" y="312.66666666666663" width="414" height="67.333333333333314"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="O5t-N4-oCR">
-                                                <rect key="frame" x="87.666666666666686" y="0.0" width="239" height="44.666666666666664"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show me interesting photos for" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QsP-vO-9yW">
-                                                        <rect key="frame" x="0.0" y="0.0" width="239" height="20.333333333333332"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Date&gt;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
-                                                        <rect key="frame" x="90.666666666666671" y="24.333333333333371" width="57.333333333333329" height="20.333333333333329"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Show me photos for&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
+                                                <rect key="frame" x="107" y="0.0" width="200" height="20.333333333333332"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="51L-NV-IKW"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iiy-AQ-S8Q">
-                                                <rect key="frame" x="157" y="52.666666666666742" width="100" height="39"/>
+                                                <rect key="frame" x="143.66666666666666" y="28.333333333333371" width="126.99999999999997" height="39"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="LET'S GO!"/>
+                                                <state key="normal" title="&lt;LET'S GO!&gt;"/>
                                                 <connections>
                                                     <action selector="startButtonTapped" destination="IpJ-h8-xkM" eventType="touchUpInside" id="kpl-dF-8PK"/>
                                                 </connections>
@@ -134,11 +126,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MrP-iw-8hB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Photos For Days" id="O7k-Vh-QQI"/>
+                    <navigationItem key="navigationItem" title="&lt;Photos For Days&gt;" id="O7k-Vh-QQI"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="datePicker" destination="rUe-eZ-eeT" id="7xE-az-edu"/>
+                        <outlet property="hintLabel" destination="1w8-Wk-aVl" id="qLb-oh-H0E"/>
                         <outlet property="selectedDateLabel" destination="IVB-kY-ZEG" id="Sgl-Sb-iB3"/>
+                        <outlet property="startButton" destination="iiy-AQ-S8Q" id="hc0-y1-v6T"/>
                         <outlet property="view" destination="IxJ-ea-coe" id="y9U-wv-v6U"/>
                     </connections>
                 </viewController>
@@ -262,9 +256,9 @@
                                 </connections>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0x-cb-gWJ">
-                                <rect key="frame" x="0.0" y="747.33333333333337" width="414" height="65.666666666666629"/>
+                                <rect key="frame" x="0.0" y="747.66666666666663" width="414" height="65.333333333333371"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wIh-Sh-rA6">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aZI-uP-85F">
