--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VDk-CF-KUx">
                                         <rect key="frame" x="75" y="1.6666666666666643" width="50" height="47"/>
-                                        <color key="tintColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" name="SecondaryLabel"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="X78-Bx-bW3"/>
                                             <constraint firstAttribute="height" constant="50" id="hLJ-7Y-i6x"/>
@@ -31,7 +31,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zl5-9H-rbq">
                                         <rect key="frame" x="24.666666666666657" y="66" width="151" height="49"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                        <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" name="SecondaryLabel"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -41,7 +41,7 @@
                                 <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="SecondaryBackground"/>
                         <constraints>
                             <constraint firstItem="6dj-Ps-acK" firstAttribute="centerY" secondItem="cXz-ZR-vKt" secondAttribute="centerY" id="kGJ-Jc-FtX"/>
                             <constraint firstItem="6dj-Ps-acK" firstAttribute="centerX" secondItem="cXz-ZR-vKt" secondAttribute="centerX" id="zDH-J8-8Qa"/>
@@ -67,7 +67,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-fh-STk">
-                                <rect key="frame" x="0.0" y="258" width="414" height="380"/>
+                                <rect key="frame" x="0.0" y="251" width="414" height="394"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="2oL-Dp-qhh">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="280.66666666666669"/>
@@ -78,7 +78,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started:&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
                                                         <rect key="frame" x="24" y="0.0" width="366" height="33.666666666666664"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" name="PrimaryLabel"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -86,6 +86,7 @@
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-eZ-eeT">
                                                 <rect key="frame" x="0.0" y="64.666666666666686" width="414" height="216"/>
+                                                <color key="tintColor" name="PrimaryLabel"/>
                                                 <connections>
                                                     <action selector="datePickerValueChangedWithPicker:" destination="IpJ-h8-xkM" eventType="valueChanged" id="pJx-hF-oEz"/>
                                                 </connections>
@@ -93,7 +94,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XqP-sG-Tp8">
-                                        <rect key="frame" x="0.0" y="312.66666666666663" width="414" height="67.333333333333314"/>
+                                        <rect key="frame" x="0.0" y="312.66666666666663" width="414" height="81.333333333333314"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Show me photos for&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
                                                 <rect key="frame" x="107" y="0.0" width="200" height="20.333333333333332"/>
@@ -101,13 +102,15 @@
                                                     <constraint firstAttribute="width" constant="200" id="51L-NV-IKW"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" name="PrimaryLabel"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iiy-AQ-S8Q">
-                                                <rect key="frame" x="143.66666666666666" y="28.333333333333371" width="126.99999999999997" height="39"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="&lt;LET'S GO!&gt;"/>
+                                                <rect key="frame" x="110" y="28.333333333333371" width="194" height="53"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <state key="normal" title="&lt;LET'S GO!&gt;">
+                                                    <color key="titleColor" name="PrimaryTint"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="startButtonTapped" destination="IpJ-h8-xkM" eventType="touchUpInside" id="kpl-dF-8PK"/>
                                                 </connections>
@@ -118,7 +121,7 @@
                                 <variation key="heightClass=compact-widthClass=compact" alignment="center" axis="horizontal"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
                         <constraints>
                             <constraint firstItem="1Dh-fh-STk" firstAttribute="leading" secondItem="MrP-iw-8hB" secondAttribute="leading" id="4sn-Th-piB"/>
                             <constraint firstItem="MrP-iw-8hB" firstAttribute="trailing" secondItem="1Dh-fh-STk" secondAttribute="trailing" id="VKy-oy-7RM"/>
@@ -150,7 +153,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qER-gO-VTa">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" name="PrimaryBackground"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="ly1-wG-IAt">
                                     <size key="itemSize" width="250" height="250"/>
                                     <size key="estimatedItemSize" width="250" height="250"/>
@@ -217,7 +220,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
                         <constraints>
                             <constraint firstItem="7rg-0G-7km" firstAttribute="trailing" secondItem="dlx-Ql-8L4" secondAttribute="trailing" id="2Os-zl-Tt8"/>
                             <constraint firstItem="qER-gO-VTa" firstAttribute="leading" secondItem="7rg-0G-7km" secondAttribute="leading" id="As5-DK-Ero"/>
@@ -256,9 +259,9 @@
                                 </connections>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0x-cb-gWJ">
-                                <rect key="frame" x="0.0" y="747" width="414" height="66"/>
+                                <rect key="frame" x="0.0" y="747.66666666666663" width="414" height="65.333333333333371"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wIh-Sh-rA6">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65.333333333333371"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aZI-uP-85F">
@@ -267,7 +270,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="&lt;title&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOl-jC-KDs">
                                                     <rect key="frame" x="16" y="15.999999999999996" width="382" height="33.666666666666657"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" name="PrimaryLabel"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -284,7 +287,7 @@
                                 <blurEffect style="regular"/>
                             </visualEffectView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
                         <constraints>
                             <constraint firstItem="plK-rG-o7V" firstAttribute="top" secondItem="xe2-xx-0JS" secondAttribute="top" id="6ZP-cZ-B7Y"/>
                             <constraint firstAttribute="trailing" secondItem="plK-rG-o7V" secondAttribute="trailing" id="M9Y-XS-MbY"/>
@@ -326,6 +329,21 @@
         <image name="calendar" catalog="system" width="128" height="106"/>
         <namedColor name="ErrorBackground">
             <color red="0.98039215686274506" green="0.20392156862745098" blue="0.16470588235294117" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryBackground">
+            <color red="0.95686274509803926" green="0.95686274509803926" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryLabel">
+            <color red="0.30588235294117649" green="0.28235294117647058" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryTint">
+            <color red="0.95686274509803926" green="0.0" blue="0.46274509803921571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SecondaryBackground">
+            <color red="0.84313725490196079" green="0.84313725490196079" blue="0.84313725490196079" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SecondaryLabel">
+            <color red="0.43529411764705883" green="0.41568627450980394" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
