Adjusts select date view controller layout

--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -67,16 +67,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-fh-STk">
-                                <rect key="frame" x="0.0" y="251" width="414" height="394"/>
+                                <rect key="frame" x="0.0" y="234" width="414" height="428"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="2oL-Dp-qhh">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="280.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="314.66666666666669"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qRX-Xm-XiU">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="33.666666666666664"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qRX-Xm-XiU">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="67.666666666666671"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started:&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
-                                                        <rect key="frame" x="24" y="0.0" width="366" height="33.666666666666664"/>
+                                                        <rect key="frame" x="82" y="0.0" width="250" height="67.666666666666671"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="250" id="Z0S-F2-5V2"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                         <color key="textColor" name="PrimaryLabel"/>
                                                         <nil key="highlightedColor"/>
@@ -85,7 +88,7 @@
                                                 <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="24" bottom="0.0" trailing="24"/>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-eZ-eeT">
-                                                <rect key="frame" x="0.0" y="64.666666666666686" width="414" height="216"/>
+                                                <rect key="frame" x="0.0" y="98.666666666666686" width="414" height="216"/>
                                                 <color key="tintColor" name="PrimaryLabel"/>
                                                 <connections>
                                                     <action selector="datePickerValueChangedWithPicker:" destination="IpJ-h8-xkM" eventType="valueChanged" id="pJx-hF-oEz"/>
@@ -94,12 +97,12 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XqP-sG-Tp8">
-                                        <rect key="frame" x="0.0" y="312.66666666666663" width="414" height="81.333333333333314"/>
+                                        <rect key="frame" x="0.0" y="346.66666666666663" width="414" height="81.333333333333314"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Show me photos for&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
-                                                <rect key="frame" x="107" y="0.0" width="200" height="20.333333333333332"/>
+                                                <rect key="frame" x="82" y="0.0" width="250" height="20.333333333333332"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="200" id="51L-NV-IKW"/>
+                                                    <constraint firstAttribute="width" constant="250" id="51L-NV-IKW"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" name="PrimaryLabel"/>
@@ -259,9 +262,9 @@
                                 </connections>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0x-cb-gWJ">
-                                <rect key="frame" x="0.0" y="747.66666666666663" width="414" height="65.333333333333371"/>
+                                <rect key="frame" x="0.0" y="747" width="414" height="66"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wIh-Sh-rA6">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65.333333333333371"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aZI-uP-85F">
