--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -66,69 +66,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-fh-STk">
-                                <rect key="frame" x="0.0" y="234" width="414" height="428"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8S5-kA-Zs8">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="2oL-Dp-qhh">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="314.66666666666669"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-fh-STk">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="460"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qRX-Xm-XiU">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="67.666666666666671"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="2oL-Dp-qhh">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="346.66666666666669"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started:&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
-                                                        <rect key="frame" x="82" y="0.0" width="250" height="67.666666666666671"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qRX-Xm-XiU">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="99.666666666666671"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Select a date to get started:&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-Wk-aVl">
+                                                                <rect key="frame" x="82" y="32.000000000000007" width="250" height="67.666666666666686"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="250" id="Z0S-F2-5V2"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                                <color key="textColor" name="PrimaryLabel"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <directionalEdgeInsets key="directionalLayoutMargins" top="32" leading="24" bottom="0.0" trailing="24"/>
+                                                    </stackView>
+                                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-eZ-eeT">
+                                                        <rect key="frame" x="0.0" y="130.66666666666666" width="414" height="215.99999999999997"/>
+                                                        <color key="tintColor" name="PrimaryLabel"/>
+                                                        <connections>
+                                                            <action selector="datePickerValueChangedWithPicker:" destination="IpJ-h8-xkM" eventType="valueChanged" id="pJx-hF-oEz"/>
+                                                        </connections>
+                                                    </datePicker>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XqP-sG-Tp8">
+                                                <rect key="frame" x="0.0" y="378.66666666666669" width="414" height="81.333333333333314"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Show me photos for&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
+                                                        <rect key="frame" x="82" y="0.0" width="250" height="20.333333333333332"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="250" id="Z0S-F2-5V2"/>
+                                                            <constraint firstAttribute="width" constant="250" id="51L-NV-IKW"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                         <color key="textColor" name="PrimaryLabel"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iiy-AQ-S8Q">
+                                                        <rect key="frame" x="110" y="28.333333333333314" width="194" height="53"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                        <state key="normal" title="&lt;LET'S GO!&gt;">
+                                                            <color key="titleColor" name="PrimaryTint"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="startButtonTapped" destination="IpJ-h8-xkM" eventType="touchUpInside" id="kpl-dF-8PK"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
-                                                <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="24" bottom="0.0" trailing="24"/>
                                             </stackView>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-eZ-eeT">
-                                                <rect key="frame" x="0.0" y="98.666666666666686" width="414" height="216"/>
-                                                <color key="tintColor" name="PrimaryLabel"/>
-                                                <connections>
-                                                    <action selector="datePickerValueChangedWithPicker:" destination="IpJ-h8-xkM" eventType="valueChanged" id="pJx-hF-oEz"/>
-                                                </connections>
-                                            </datePicker>
                                         </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XqP-sG-Tp8">
-                                        <rect key="frame" x="0.0" y="346.66666666666663" width="414" height="81.333333333333314"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Show me photos for&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVB-kY-ZEG">
-                                                <rect key="frame" x="82" y="0.0" width="250" height="20.333333333333332"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="250" id="51L-NV-IKW"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" name="PrimaryLabel"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iiy-AQ-S8Q">
-                                                <rect key="frame" x="110" y="28.333333333333371" width="194" height="53"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                                <state key="normal" title="&lt;LET'S GO!&gt;">
-                                                    <color key="titleColor" name="PrimaryTint"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="startButtonTapped" destination="IpJ-h8-xkM" eventType="touchUpInside" id="kpl-dF-8PK"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
+                                        <variation key="heightClass=compact-widthClass=compact" alignment="center" axis="horizontal"/>
                                     </stackView>
                                 </subviews>
-                                <variation key="heightClass=compact-widthClass=compact" alignment="center" axis="horizontal"/>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstItem="1Dh-fh-STk" firstAttribute="top" secondItem="8S5-kA-Zs8" secondAttribute="top" id="R16-Ty-SOo"/>
+                                    <constraint firstItem="1Dh-fh-STk" firstAttribute="trailing" secondItem="8S5-kA-Zs8" secondAttribute="trailing" id="UgZ-mY-srs"/>
+                                    <constraint firstItem="1Dh-fh-STk" firstAttribute="bottom" secondItem="8S5-kA-Zs8" secondAttribute="bottom" id="joU-HA-MJS"/>
+                                    <constraint firstItem="1Dh-fh-STk" firstAttribute="leading" secondItem="8S5-kA-Zs8" secondAttribute="leading" id="qgY-Dj-Cy4"/>
+                                    <constraint firstItem="1Dh-fh-STk" firstAttribute="width" secondItem="8S5-kA-Zs8" secondAttribute="width" id="u4b-FI-mWx"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" name="PrimaryBackground"/>
                         <constraints>
-                            <constraint firstItem="1Dh-fh-STk" firstAttribute="leading" secondItem="MrP-iw-8hB" secondAttribute="leading" id="4sn-Th-piB"/>
-                            <constraint firstItem="MrP-iw-8hB" firstAttribute="trailing" secondItem="1Dh-fh-STk" secondAttribute="trailing" id="VKy-oy-7RM"/>
-                            <constraint firstItem="1Dh-fh-STk" firstAttribute="centerY" secondItem="IxJ-ea-coe" secondAttribute="centerY" id="oBn-a9-4VI"/>
+                            <constraint firstItem="MrP-iw-8hB" firstAttribute="bottom" secondItem="8S5-kA-Zs8" secondAttribute="bottom" id="JBq-gG-66H"/>
+                            <constraint firstItem="8S5-kA-Zs8" firstAttribute="leading" secondItem="IxJ-ea-coe" secondAttribute="leading" id="KYF-8o-TbB"/>
+                            <constraint firstAttribute="trailing" secondItem="8S5-kA-Zs8" secondAttribute="trailing" id="lwR-Gm-G2F"/>
+                            <constraint firstItem="8S5-kA-Zs8" firstAttribute="top" secondItem="MrP-iw-8hB" secondAttribute="top" id="zR1-FH-Swf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MrP-iw-8hB"/>
                     </view>
@@ -262,15 +275,15 @@
                                 </connections>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0x-cb-gWJ">
-                                <rect key="frame" x="0.0" y="747" width="414" height="66"/>
+                                <rect key="frame" x="0.0" y="747.66666666666663" width="414" height="65.333333333333371"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wIh-Sh-rA6">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aZI-uP-85F">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="65.666666666666671"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="&lt;title&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOl-jC-KDs">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="&lt;title&gt;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOl-jC-KDs">
                                                     <rect key="frame" x="16" y="15.999999999999996" width="382" height="33.666666666666657"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                     <color key="textColor" name="PrimaryLabel"/>
